Give game msg fixed height on small screens

--- a/src/styles/_controls.scss
+++ b/src/styles/_controls.scss
@@ -1,4 +1,13 @@
 #game-controls {
+  #game-message {
+    vertical-align: middle;
+    height: 2.8em; // fixed on small screens, so buttons below stay in place
+
+    @include media-breakpoint-up(md) {
+      height: auto;
+    }
+  }
+
   input {
     &#player-name {
       width: 66%;
